Add typogrify, update design

--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -46,11 +46,13 @@ html.no-js(lang="en")
 						a(href="#jonah") Jonah
 				#jonah-1.intro.slide.visible
 					.wrapper
-						.image.sizable
+						.introimage.sizable
 							img(src="img/jonahintro.png")
 					.wrapper
 						.introtext.sizable
-							p I usually prefer relief printing to other traditional artforms. 
+							p 
+								span.leader I usually prefer
+								|  relief printing to other traditional media, maybe because it seems to fit so well with letterpress printing. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.
 				#jonah-2.slide
 					.wrapper
 						.button.sizable
