--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,7 @@
 @import "base/normalize"
 @import "base/h5bp"
 @import "base/basics"
+@import "typogrify"
 
 
 // Colors
@@ -200,9 +201,10 @@ a.infobutton
 // Intro page
 .intro
 	background-color: #000
-	.image
+	.introimage
 		padding-left: 55%
 	.introtext
 		padding-right: 45%
+		padding-left: 5%
 
 
