--- a/sass/style.sass
+++ b/sass/style.sass
@@ -75,6 +75,7 @@ header.main
 		width: 100px
 		height: 40px
 		margin-right: -9px
+		z-index: 200
 		a.ir
 			transition: all 0.2s ease
 			display: block
@@ -103,6 +104,7 @@ header.main
 	.current &
 		opacity: 1
 		left: 0
+		z-index: 100
 	h2
 		margin: 0 5%
 		height: 67px
@@ -222,5 +224,7 @@ a.infobutton
 			font-size: 0.8em
 			letter-spacing: 1px
 			font-weight: 300
+			.caps
+				font-size: 1em
 
 
