--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -89,7 +89,7 @@ html.no-js(lang="en")
 									a.ir.infobutton(href="#") Show info
 							.wrapper
 								.image.sizable
-									div(data-picture, data-disable-swap-above, data-alt="Slipcase and cover for Jonah book")
+									div(data-picture, data-disable-swap-above, data-alt=slide.alt)
 										//- 400
 										div(data-src=slide.image + '-400.jpg')
 										div(data-src=slide.image + '-800.jpg',
@@ -107,7 +107,7 @@ html.no-js(lang="en")
 											data-media="(min-width: 1600px)")
 										// non-js browsers
 										noscript
-											img(src=slide.image + '-400.jpg', alt="A giant stone face at The Bayon temple in Angkor Thom, Cambodia")
+											img(src=slide.image + '-400.jpg', alt=slide.alt)
 							.wrapper
 								.info.sizable
 									.infoinner
