--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,7 +19,7 @@ $sans-font-family: "museo-sans", Helvetica, sans-serif
 
 
 // General
-*
+*, *:before, *:after
 	box-sizing: border-box
 	position: relative
 
