--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -90,11 +90,9 @@ html.no-js(lang="en")
 									a.ir.infobutton(href="#") Show info
 							.wrapper
 								.image.sizable
-									img(alt=slide.alt,
-										data-src-base='img/',
-										data-src-base2x='img/',
-										data-src='<444:' + slide.image + '-400.jpg, <888:' + slide.image + '-800.jpg, <1777:' + slide.image + '-1600.jpg, >1777:' + slide.image + '-3200.jpg',
-										data-src2x='<444:' + slide.image + '-800.jpg, <888:' + slide.image + '-1600.jpg, >888:' + slide.image + '-3200.jpg')
+									img.responsive(alt=slide.alt,
+										data-src=slide.image,
+										data-ext=slide.ext)
 									noscript
 										img(alt=slide.alt,
 											src='img/' + slide.image + '-400.jpg')
