Add compressed images, add drop cap

--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -71,7 +71,8 @@ html.no-js(lang="en")
 						.wrapper
 							.introtext.sizable
 								p
-									span.leader #{project.leader}
+									span.dropcap(style="margin-left:" + project.capoffset)!= project.cap
+									span.leader!= project.leader
 									span!= project.text
 
 
