--- a/sass/style.sass
+++ b/sass/style.sass
@@ -221,11 +221,19 @@ a.infobutton
 		color: $yellow1
 		font-family: $slab-font-family
 		font-weight: 100
+		.dropcap
+			font-size: 3.05em
+			float: left
+			margin: .12em .06em 0 0
+			line-height: 0.8
+			font-weight: 100
+			opacity: 0.8
 		.leader
 			text-transform: uppercase
 			font-size: 0.8em
 			letter-spacing: 1px
 			font-weight: 300
+			display: inline-block
 			.caps
 				font-size: 1em
 
