Adjust intro image

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -223,15 +223,17 @@ a.infobutton
 	@media (min-width: 1200px)
 		font-size: 1.1em
 	.introimage
-		width: 40%
-		opacity: 0.6
+		width: 25%
+		opacity: 0.5
 		margin: 0 auto
-		padding-right: 15%
+		min-width: 250px
+		max-width: 600px
 	.introtext 
 		font-family: $slab-font-family
 		margin: 0 auto
 		max-width: 35em
-		margin: 0 auto
+		margin: 0 auto 0
+		left: 5%
 		h3
 			font-size: 0.95em
 			font-weight: 100
