Update intro image style

--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -72,6 +72,7 @@ html.no-js(lang="en")
 									span.dropcap(style="margin-left:" + project.capoffset)!= project.cap
 									span.leader!= project.leader
 									span!= project.text
+						.wrapper
 							.introimage
 								img(src="img/title-pages/" + project.image)
 
