--- a/sass/style.sass
+++ b/sass/style.sass
@@ -223,9 +223,9 @@ a.infobutton
 	@media (min-width: 1200px)
 		font-size: 1.1em
 	.introimage
-		width: 25%
-		opacity: 0.5
-		margin: 0 auto
+		width: 100%
+		opacity: 0.2
+		margin: 0
 		min-width: 250px
 		max-width: 600px
 	.introtext 
@@ -233,11 +233,10 @@ a.infobutton
 		margin: 0 auto
 		max-width: 35em
 		margin: 0 auto 0
-		left: 5%
 		h3
 			font-size: 0.95em
 			font-weight: 100
-			color: mix( $yellow1, #000 )
+			color: mix( $yellow1, #000, 60% )
 			font-weight: 700
 			letter-spacing: 2px
 			margin: 2em 0 1.5em
@@ -247,9 +246,10 @@ a.infobutton
 			font-weight: 100
 			font-size: 1.5em
 			line-height: 1.5
-			color: $yellow1
+			color: mix( $yellow1, #fff, 80% )
 			.dropcap
 				font-family: "coquette", $slab-font-family
+				color: $yellow1
 				font-size: 3.05em
 				float: left
 				margin: 0.14em 0.08em 0 0
