--- a/jade/index.html.jade
+++ b/jade/index.html.jade
@@ -1,123 +1,81 @@
-doctype html
-html.no-js(lang="en")
-	head
-		- var assetBase = '';
-		//- var assetBase = 'http://static.nkwalton.com/';
-		meta(charset='UTF-8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-		title Nate Walton
-		meta(name='description', content='Description about your department.')
-		meta(name='author', content='Your Department Name')
-		meta(name='keywords', content='keyword 1, keyword 2, keyword 3')
-		meta(name='viewport', content='width=device-width, , initial-scale=1')
+extends _layout
 
-		// Place favicon.ico and apple-touch-icon.png in the root directory
-		link(rel='shortcut icon', href= assetBase + 'favicon.ico')
+block content
 
-		// Styles
-		link(rel='stylesheet', href= assetBase + 'css/style.css')
+	div.main.portfolio.show-info
+		nav
+			a.ir.next(href="#") Next slide
+			a.ir.prev(href="#") Previous slide
+		#intro.project(data-project="0")
+			.title
+				h2 Work
+			#intro-1.slide.intro.last
+				.wrapper
+					.sizable
+						//- Render list
+						for project in projects
+							a.projectLink(href='#' + project.id)
+								span.projectDesc 
+									// span.projectType #{project.desc}
+									span.projectTitle #{project.title}
+								each slide, i in project.slides
+									if i === 0
+										img.lazy.front(data-src= slide.image, data-ext=slide.ext, alt='')
 
-		// Scripts loaded via script loader. See notes in init.js file.
-		script(type="text/javascript", src="//use.typekit.net/nyn3skg.js")
-		script(type="text/javascript").
-			try{Typekit.load();}catch(e){}
-		script(src= assetBase + 'js/init.min.js')
 
-	body
-		header.main
-			h1 Nate Walton
-			nav
-				a(href="/") Home
-				a(href="/") Portfolio
+		//- Render projects
+		- var projectNum = 0;
 
-		div.main.portfolio.show-info
-			nav
-				a.ir.next(href="#") Next slide
-				a.ir.prev(href="#") Previous slide
-			#intro.project(data-project="0")
+		for project in projects
+			- projectNum += 1;
+			- var numSlides = project.slides.length, last = '';
+			- if (!numSlides) { last = ' last' }
+			.project(data-project=projectNum, id=project.id)
 				.title
-					h2 Work
-				#intro-1.slide.intro.last
+					h2
+						a(href='#' + project.id) #{project.title}
+				div(id=project.id + '-1', class='slide intro' + last)
 					.wrapper
-						.sizable
-							//- Render list
-							for project in projects
-								a.projectLink(href='#' + project.id)
-									span.projectDesc 
-										// span.projectType #{project.desc}
-										span.projectTitle #{project.title}
-									each slide, i in project.slides
-										if i === 0
-											img.lazy.front(data-src= slide.image, data-ext=slide.ext, alt='')
+						.introimage
+							img.lazy.titleImage(data-src=project.image, data-ext='', alt='')
+					.wrapper
+						.introtext
+							h3 #{project.desc}
+							p
+								span.dropcap(style="margin-left:" + project.capoffset)!= project.cap
+								span.leader(style="margin-left:" + project.leaderoffset)!= project.leader
+								span!= project.text
 
 
-			//- Render projects
-			- var projectNum = 0;
+				//- Render slides 
 
-			for project in projects
-				- projectNum += 1;
-				- var numSlides = project.slides.length, last = '';
-				- if (!numSlides) { last = ' last' }
-				.project(data-project=projectNum, id=project.id)
-					.title
-						h2
-							a(href='#' + project.id) #{project.title}
-					div(id=project.id + '-1', class='slide intro' + last)
-						.wrapper
-							.introimage
-								img.lazy.titleImage(data-src=project.image, data-ext='', alt='')
-						.wrapper
-							.introtext
-								h3 #{project.desc}
-								p
-									span.dropcap(style="margin-left:" + project.capoffset)!= project.cap
-									span.leader(style="margin-left:" + project.leaderoffset)!= project.leader
-									span!= project.text
+				- var slideNum = 1,  last = '';
 
+				for slide in project.slides
 
-					//- Render slides 
+					- if (slideNum == numSlides) { last = ' last'; }
+					- slideNum += 1;
 
-					- var slideNum = 1,  last = '';
-
-					for slide in project.slides
-
-						- if (slideNum == numSlides) { last = ' last'; }
-						- slideNum += 1;
-
-						div(id=project.id + '-' + slideNum, class='slide' + last)
-							.wrapper.buttonwrapper
-								.button.sizable
-									a.ir.infobutton(href="#") Show info
-							.wrapper.imagewrapper
-								.image.sizable
-									img.lazy.responsive(alt=slide.alt,
-										data-src=slide.image,
-										data-ext=slide.ext)
-									noscript
-										img(alt=slide.alt,
-											src= assetBase + 'img/400w/' + slide.image + slide.ext)
-							.wrapper.textwrapper
-								.info.sizable
-									.infoinner
+					div(id=project.id + '-' + slideNum, class='slide' + last)
+						.wrapper.buttonwrapper
+							.button.sizable
+								a.ir.infobutton(href="#") Show info
+						.wrapper.imagewrapper
+							.image.sizable
+								img.lazy.responsive(alt=slide.alt,
+									data-src=slide.image,
+									data-ext=slide.ext)
+								noscript
+									img(alt=slide.alt,
+										src= assetBase + 'img/400w/' + slide.image + slide.ext)
+						.wrapper.textwrapper
+							.info.sizable
+								.infoinner
 
 
-										//- Render specs
-										for item in slide.specs
-											h3 #{item.title}
-											ul
-												for listItem in item.list
-													li #{listItem}
-
-		footer.main
-
-
-//-								ul.projectThumb
-//-									li.projectTitle
-//-										a(href='#' + project.id) #{project.title}
-//-									- var slideNum = 1
-//-									for slide in project.slides
-//-										- slideNum += 1;
-//-										li(class="slide-" + slideNum)
-//-											a(href="#" + project.id + "-" + slideNum)
-//-												span.slideLink.visuallyhidden Slide #{slideNum}
-//-												img(src='img/400w/' + slide.image + slide.ext)
+									//- Render specs
+									for item in slide.specs
+										h3 #{item.title}
+										ul
+											for listItem in item.list
+												li #{listItem}
